# balancedbird

./: Cargo.toml
docs/: CNAME  contact.html  index.html  scripts.js  styles.css
docs/img/OnlineWebFonts_COM_a32a84dca55e95f569790d8ed5d765fd/CA Spy Royal W00 Regular/Web Fonts/: Web Fonts Demo.html
docs/presets/: c152usaa.json
src/: main.rs
src/lib/: error.rs  helper.rs  routes.rs  rx.rs  types.rs
src/test/: helper.rs
web/: index.html  scripts.js  styles.css
