[package]
name = "balancedbird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.35.1", features = ["macros","rt-multi-thread", "signal", "sync", "full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
chrono = "0.4.38"
#rand = "0.8.5"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["cors"] }
scraper = "0.22.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
approx = "0.5"
itertools = "0.14.0" #for tests